src/objects/Apt_History__c.object
<CustomObject>
    <description>Table to hold a history of changes on an appointment.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account that was scheduled to this block when available.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Apt Histories</relationshipLabel>
        <relationshipName>Apt_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Reason__c</fullName>
        <description>Filled out when the action type involves a reason selection. At first this will be used with reschedules, but I could see it branching out to cancellation at a later time and date.</description>
        <label>Action Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conflict with Schedule</fullName>
                </value>
                <value>
                    <fullName>Emergency/Sick</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>Schedule Management</fullName>
                </value>
                <value>
                    <fullName>Transporatation Issues</fullName>
                </value>
                <value>
                    <fullName>Weather</fullName>
                </value>
                <value>
                    <fullName>Move Up in Schedule</fullName>
                </value>
                <value>
                    <fullName>Center Request</fullName>
                </value>
                <value>
                    <fullName>GLO</fullName>
                </value>
                <value>
                    <fullName>Aged Effort</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>name of the action performed on the appointment block</description>
        <label>Action</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apts_in_next_seven__c</fullName>
        <label>Apts in next seven</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <description>List of cancellation reasons. I should of put this in action reason and made action the controller field for the picklist, but it&apos;s something I can review later.</description>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conflict with Schedule</fullName>
                </value>
                <value>
                    <fullName>Sick</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Transportation Issues</fullName>
                </value>
                <value>
                    <fullName>Family Conference</fullName>
                </value>
                <value>
                    <fullName>Weather</fullName>
                </value>
                <value>
                    <fullName>Not a Candidate</fullName>
                </value>
                <value>
                    <fullName>Email/VM/Text - No Reason</fullName>
                </value>
                <value>
                    <fullName>Consult Sched Too Full</fullName>
                </value>
                <value>
                    <fullName>Not Interested- Bad Review</fullName>
                </value>
                <value>
                    <fullName>Not Interested- Cost</fullName>
                </value>
                <value>
                    <fullName>Not Interested- Distance</fullName>
                </value>
                <value>
                    <fullName>Not Interested- Insurance</fullName>
                </value>
                <value>
                    <fullName>Not Interested- Went Elsewhere</fullName>
                </value>
                <value>
                    <fullName>Duplicate Record/Schedule</fullName>
                </value>
                <value>
                    <fullName>Schedule Management</fullName>
                </value>
                <value>
                    <fullName>Center Request</fullName>
                </value>
                <value>
                    <fullName>Center Request - Weather</fullName>
                </value>
                <value>
                    <fullName>Test Schedule</fullName>
                </value>
                <value>
                    <fullName>Change Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consult_Inventory__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to the appointment block this event was related to.</description>
        <label>Consult Inventory</label>
        <referenceTo>Consult_Inventory__c</referenceTo>
        <relationshipLabel>Apt Histories</relationshipLabel>
        <relationshipName>Apt_Histories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delete_Reason__c</fullName>
        <label>Delete Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doctor Request</fullName>
                </value>
                <value>
                    <fullName>PEC Sick/Schedule</fullName>
                </value>
                <value>
                    <fullName>Weather Closures</fullName>
                </value>
                <value>
                    <fullName>Center Request</fullName>
                </value>
                <value>
                    <fullName>Traveler/master Schedule Update</fullName>
                </value>
                <value>
                    <fullName>Schedule Management</fullName>
                </value>
                <value>
                    <fullName>GLO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Double_Consult__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Double Consult</label>
        <referenceTo>Consult_Inventory__c</referenceTo>
        <relationshipLabel>Apt Histories (Double Consult)</relationshipLabel>
        <relationshipName>Apt_Histories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Agent__c</fullName>
        <description>Name of the agent from an external agency that registered this task or activity.</description>
        <label>External Agent</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flyover_Appointments__c</fullName>
        <description>Number of appointments available to a prospective patient between the time they scheduled and an appointment and the appointment date.</description>
        <label>Flyover_Appointments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for lead tied to this appointment block. Only avaliable when a lead was tied to the block in question</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Apt Histories</relationshipLabel>
        <relationshipName>Apt_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Details about the change that was performed</description>
        <label>Notes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Practice_Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Private Practice Patient</label>
        <referenceTo>Private_Practice_Patient__c</referenceTo>
        <relationshipLabel>Apt Histories</relationshipLabel>
        <relationshipName>Apt_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rescheduled_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the consult inventory block a reschedule was moved from</description>
        <label>Rescheduled From</label>
        <referenceTo>Consult_Inventory__c</referenceTo>
        <relationshipLabel>Apt Histories (Rescheduled From)</relationshipLabel>
        <relationshipName>Apt_Histories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isCancelled__c</fullName>
        <formula>if( Action__c = &apos;Cancel&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isCancelled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isInitialSchedule__c</fullName>
        <formula>if( Action__c ==&apos;Scheduled&apos; &amp;&amp;  Notes__c =&apos;Consultation has been scheduled&apos;, 1 ,0)</formula>
        <label>isInitialSchedule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Apt History</label>
    <nameField>
        <displayFormat>Evt-{0}</displayFormat>
        <label>Apt History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apt Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>